# does-it-throw

./: .all-contributorsrc  .autorc  .gitignore  .release-please-manifest.json  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  biome.json  build.ts  bun.lockb  package-lock.json  package.json  release-please-config.json  release-please-manifest.json  tsconfig.build.json  tsconfig.json
.changeset/: large-cameras-wonder.md
.github/: FUNDING.yml  dependabot.yml
.github/auto/: crate-plugin.ts  vscode-plugin.ts
.github/workflows/: ci.yaml  jetbrains.yaml  pre-release.yaml  release-npm.yaml  release-old.txt  release-please.yaml  release-vsix.yaml  release.yaml  rust.yaml  ts.yaml
client/: CHANGELOG.md  package.json  tsconfig.json
client/src/: extension.ts
crates/does-it-throw/: CHANGELOG.md  Cargo.toml
crates/does-it-throw-wasm/: CHANGELOG.md  Cargo.toml
crates/does-it-throw-wasm/src/: lib.rs
crates/does-it-throw/src/: call_finder.rs  import_usage_finder.rs  lib.rs  main.rs  throw_finder.rs
crates/does-it-throw/src/fixtures/: callExpr.ts  class.js  class.ts  exports.js  exports.ts  ignoreStatements.js  ignoreStatements.ts  importIdentifiers.ts  jsx.jsx  objectLiteral.js  objectLiteral.ts  returnStatement.ts  sample.ts  something.ts  spreadExpr.ts  switchStatement.ts  tryStatement.ts  tryStatementNested.ts  tsx.tsx
docs/: neovim.md  usage.md
does-it-throw/: Cargo.toml
does-it-throw-wasm/: Cargo.toml  Makefile
does-it-throw-wasm/src/: helpers.rs  lib.rs
does-it-throw/src/: lib.rs  main.rs  shared.rs
eslint/: package.json  tsconfig.json
eslint/src/: index.ts
intellij/: README.md  build.gradle.kts  gradle.properties
intellij/.github/template-cleanup/: gradle.properties
intellij/.github/workflows/: template-cleanup.yml
intellij/src/main/kotlin/org/jetbrains/plugins/dit/: DoesItThrowUtils.kt  MyBundle.kt
intellij/src/main/kotlin/org/jetbrains/plugins/dit/listeners/: MyApplicationActivationListener.kt
intellij/src/main/kotlin/org/jetbrains/plugins/dit/lsp/: LspServerDescriptor.kt  LspServerSupportProvider.kt
intellij/src/main/kotlin/org/jetbrains/plugins/dit/services/: MyProjectService.kt
intellij/src/main/kotlin/org/jetbrains/plugins/dit/toolWindow/: MyToolWindowFactory.kt
intellij/src/test/kotlin/org/jetbrains/plugins/template/: MyPluginTest.kt
jetbrains/: .gitignore  CHANGELOG.md  build.gradle.kts  gradle.properties  settings.gradle.kts
jetbrains/.github/workflows/: build.yml
jetbrains/.run/: Run Tests.run.xml  Run Verifications.run.xml
jetbrains/src/main/kotlin/org/michaelangeloio/plugins/dit/: DoesItThrowBundle.kt  DoesItThrowUtils.kt
jetbrains/src/main/kotlin/org/michaelangeloio/plugins/dit/lsp/: LspServerDescriptor.kt
jetbrains/src/main/kotlin/org/michaelangeloio/plugins/dit/services/: DoesItThrowServerService.kt
jetbrains/src/main/kotlin/org/michaelangeloio/plugins/dit/settings/: DoesItThrowConfigurable.kt  DoesItThrowSettings.kt  DoesItThrowSettingsState.kt
jetbrains/src/main/resources/messages/: DoesItThrowBundle.properties
jetbrains/src/test/kotlin/org/michaelangeloio/plugins/dit/: DoesItThrowUtils.kt
server/: .gitignore  CHANGELOG.md  package.json  tsconfig.json
server/src/: analysis.ts  server.ts
src/: main.rs
testing/: other-file.ts  sample.ts  some-file.ts
vscode/: .eslintrc.js  .prettierrc.js  .vscodeignore  DEVELOPMENT.md  Makefile  bun.lockb  package.json  script.ts  tsconfig.json
vscode/client/src/: index.ts
vscode/server/src/: index.ts
