[package]
name = "does-it-throw-wasm"
version = "0.1.0"
authors = ["Michel Angelo Rivera"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.53"
lsp-types = "0.94.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.26"
