[package]
name = "does-it-throw-wasm"
version = "0.1.0"
authors = ["Michel Angelo Rivera"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
does-it-throw = { path = "../does-it-throw", version = "*"}
console_error_panic_hook = "0.1.6"
js-sys = "0.3.53"
lsp-types = "0.94.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = "0.2.87"
swc_common = "0.33"
swc_ecma_parser = "0.141.3"
swc_ecma_ast = "0.110.0"
swc_ecma_visit = "0.96"
swc_core = "0.86.16"



[dev-dependencies]
wasm-bindgen-test = "0.3.26"
