[package]
edition = "2021"
name = "does-it-throw-wasm"
version = "0.1.6"
description = "LSP server wasm binding for does-it-throw, using SWC"
license = "MIT"
documentation = "https://github.com/michaelangeloio/does-it-throw/blob/main/readme.md"
repository = "https://github.com/michaelangeloio/does-it-throw"
homepage = "https://github.com/michaelangeloio/does-it-throw/blob/main/readme.md"


[lib]
crate-type = ["cdylib"]

[dependencies]
does-it-throw = { path = "../does-it-throw", version = "0.1.6"}
swc_common = "0.33"
swc_ecma_parser = "0.141.3"
swc_ecma_ast = "0.110.0"
swc_ecma_visit = "0.96"
wasm-bindgen = {version = "0.2.74"}
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
mockall = "0.11.4"

[profile.release]
lto = true
