[package]
edition = "2021"
name = "does-it-throw-wasm"
version = "0.3.0"
description = "a WASM binding for does-it-throw - using SWC"
license = "MIT"
documentation = "https://github.com/michaelangeloio/does-it-throw/blob/main/readme.md"
repository = "https://github.com/michaelangeloio/does-it-throw"
homepage = "https://github.com/michaelangeloio/does-it-throw/blob/main/readme.md"


[lib]
crate-type = ["cdylib"]

[dependencies]
does-it-throw = { path = "../does-it-throw", version = "0.3.0"}
swc_common = "0.33"
swc_ecma_parser = "0.142.2"
swc_ecma_ast = "0.111.1"
swc_ecma_visit = "0.97.1"
wasm-bindgen = {version = "0.2.90"}
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.111"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
mockall = "0.12.1"

[profile.release]
lto = true
