[package]
name = "does-it-throw"
version = "0.1.10"
description = "a library for getting ES throw statements - using SWC"
license = "MIT"
documentation = "https://github.com/michaelangeloio/does-it-throw/blob/main/readme.md"
repository = "https://github.com/michaelangeloio/does-it-throw"
homepage = "https://github.com/michaelangeloio/does-it-throw/blob/main/readme.md"

[lib]
bench = false

[dependencies]
swc_common = "0.33"
swc_ecma_parser = "0.141"
swc_ecma_ast = "0.110"
swc_ecma_visit = "0.96"
